--- a/src/index.html
+++ b/src/index.html
@@ -68,24 +68,34 @@
     <div id="carouselExampleAutoplaying" class="carousel slide bg-dark" data-bs-ride="carousel">
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <!-- mx-auto centra cada cartel. w-90 limita el ancho. img-fluid muestra la imagen fluid en pantallas pequeñas. -->
-          <img src="img/cartel-quien-es-quien.jpg" class="d-block w-90 mx-auto img-fluid" alt="¿QUIÉN ES QUIÉN?">
+          <a href="#">
+            <!-- mx-auto centra cada cartel. w-90 limita el ancho. img-fluid muestra la imagen fluid en pantallas pequeñas. -->
+            <img src="img/cartel-quien-es-quien.jpg" class="d-block w-90 mx-auto img-fluid" alt="¿QUIÉN ES QUIÉN?">
+          </a>
         </div>
 
         <div class="carousel-item">
-          <img src="img/cartel-absolucion.jpg" class="d-block w-90 mx-auto img-fluid" alt="ABSOLUCIÓN">
+          <a href="#">
+            <img src="img/cartel-absolucion.jpg" class="d-block w-90 mx-auto img-fluid" alt="ABSOLUCIÓN">
+          </a>
         </div>
 
         <div class="carousel-item">
-          <img src="img/cartel-better-man.jpg" class="d-block w-90 mx-auto img-fluid" alt="BETTER MAN">
+          <a href="#">
+            <img src="img/cartel-better-man.jpg" class="d-block w-90 mx-auto img-fluid" alt="BETTER MAN">
+          </a>
         </div>
 
         <div class="carousel-item">
-          <img src="img/cartel-conclave.jpg" class="d-block w-90 mx-auto img-fluid" alt="CÓNCLAVE">
+          <a href="#">
+            <img src="img/cartel-conclave.jpg" class="d-block w-90 mx-auto img-fluid" alt="CÓNCLAVE">
+          </a>
         </div>
 
         <div class="carousel-item">
-          <img src="img/cartel-gladiator-2.jpg" class="d-block w-90 mx-auto img-fluid" alt="GLADIATOR II">
+          <a href="#">
+            <img src="img/cartel-gladiator-2.jpg" class="d-block w-90 mx-auto img-fluid" alt="GLADIATOR II">
+          </a>
         </div>
       </div>
 
@@ -100,5 +110,78 @@
         <span class="visually-hidden">Next</span>
       </button>
     </div>
+
+    <!-- Acordeón con las ventajas del cine -->
+    <h1 class="p-3 mb-2 mt-5 mx-5">3 beneficios de ir al cine:</h1>
+    <div class="accordion h5 mx-5" id="accordionExample">
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+            <h4>1. Relaja y reduce el estrés</h4>
+          </button>
+        </h2>
+
+        <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+          <div class="accordion-body p-3 mb-2">
+            El primer beneficio es el más evidente, y el que más relación guarda con el entretenimiento destacado al principio: el cine relaja y <strong>reduce la ansiedad y el estrés.</strong> Cuando vemos una película, nos “olvidamos” durante un rato del resto del mundo para concentrarnos solo en lo que ocurre en la pantalla. A diferencia de la lectura, que es un proceso más activo, disfrutar del cine es una actividad pasiva: es mucho más fácil distenderse, desconectar, darse un descanso mental. Y reducir el estrés, por supuesto, tiene múltiples efectos positivos sobre la salud mental y también sobre la física.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+            <h4>2. Ayuda a ver mejor los problemas</h4>
+          </button>
+        </h2>
+
+        <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            Al igual que la literatura, <strong>el cine contribuye a mejorar la capacidad de empatía. </strong> Quien ve una película acompaña a sus protagonistas y -de forma imaginaria- se pone en su lugar: experimenta emociones, deseos, sufrimientos, etc. “Cuando nos identificamos con un personaje que tiene nuestros mismos problemas, aumenta nuestra empatía y asimilamos mucho mejor su evolución personal”, explica Jaime Burque en su artículo. Por ello, la historia puede dejar enseñanzas sobre el proceso de toma de decisiones y la resolución de problemas. Por otra parte, suele ocurrir que, después de ver una película, ciertas situaciones parecen menos preocupantes o dramáticas que antes de verla. Y no es que haya cambiado algo desde un punto de vista objetivo: lo que cambió fue la mirada del observador, quien, gracias al simple hecho de haberse relajado, puede ver el mundo de otra manera.
+          </div>
+        </div>
+      </div>
+
+      <div class="accordion-item">
+        <h2 class="accordion-header">
+          <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+            <h4>3. Permite hacer catarsis</h4>
+          </button>
+        </h2>
+
+        <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+          <div class="accordion-body">
+            Para Aristóteles, la catarsis era uno de los fines morales de la tragedia. Consiste, según la definición clásica, en una purificación emocional, espiritual, mental y corporal, que se produce cuando el espectador logra descargar sus propias pasiones al verlas proyectadas en los personajes de la obra. Lo mismo ocurre en el cine: <strong>uno puede sentir odio, ira, sed de venganza,</strong> envidia y otras sensaciones y, de algún modo, librarse de ellas, sin sufrir en absoluto sus consecuencias “verdaderas”. Es decir, las que sufriría si en lugar de volcarlas en una película las llevara a su propia vida.
+          </div>
+        </div>
+      </div>
+      </div>
+    </div>
+
+    <!-- Footer -->
+    <footer>
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-4">
+            <h3>Enlaces</h3>
+            <ul>
+              <li><a href="#">Películas</a></li>
+              <li><a href="#">Lo mejor del Cine</a></li>
+            </ul>
+          </div>
+
+          <div class="col-lg-4">
+            <h3>Contacto</h3>
+            <p>Correo electrónico: contacto@cineloscalifas.com</p>
+            <p>Dirección: C/Goya s/n. Teléfono: 957112233</p>
+          </div>
+
+          <div class="col-lg-4">
+            <h3>Cine Los Califas S.L</h3>
+            <p>(c) 2023 Cine Los Califas. Todos los derechos reservados.</p>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
