--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
   <head>
@@ -27,7 +26,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item h4 mx-4">
               <!-- Enlace a todas las películas -->
-              <a class="nav-link active" aria-current="page" href="#">Películas</a>
+              <a class="nav-link active" aria-current="page" href="peliculas.html">Películas</a>
             </li>
 
             <!-- Enlace a texto promocional -->
