--- a/src/peliculas.html
+++ b/src/peliculas.html
@@ -12,7 +12,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <!-- Logo -->
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="index.html">
           <img src="img/camara.jpg" alt="Cámara de cine" class="">
           <strong class="h1 mx-5">Cine Los Califas</strong>
         </a>
@@ -31,7 +31,7 @@
 
             <!-- Enlace a texto promocional -->
             <li class="nav-item h4 mx-4">
-              <a class="nav-link" href="#">Lo mejor del Cine</a>
+              <a class="nav-link" href="index.html#promo">Lo mejor del Cine</a>
             </li>
 
             <!-- Dropdown de géneros -->
@@ -179,12 +179,12 @@
     <!-- Footer -->
     <footer>
       <div class="container">
-        <div class="row">
+        <div class="row mt-5">
           <div class="col-lg-4">
             <h3>Enlaces</h3>
             <ul>
-              <li><a href="#">Películas</a></li>
-              <li><a href="#">Lo mejor del Cine</a></li>
+              <li><a href="peliculas.html">Películas</a></li>
+              <li><a href="index.html#promo">Lo mejor del Cine</a></li>
             </ul>
           </div>
 
