Crear entradas.html
- Selección de horario y asiento.
- Al seleccionar el asiento aparece un modal con los datos, y desde el mismo se accede al pago.
- Los asientos permanecen siempre en el mismo orden usando flexbox (nowrap) y overflow.

--- a/src/peliculas.html
+++ b/src/peliculas.html
@@ -24,18 +24,18 @@
 
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item h4 mx-4">
+            <li class="nav-item h5 mx-4">
               <!-- Enlace a todas las películas -->
               <a class="nav-link active" aria-current="page" href="#">Películas</a>
             </li>
 
             <!-- Enlace a texto promocional -->
-            <li class="nav-item h4 mx-4">
+            <li class="nav-item h5 mx-4">
               <a class="nav-link" href="index.html#promo">Lo mejor del Cine</a>
             </li>
 
             <!-- Dropdown de géneros -->
-            <li class="nav-item dropdown h4 mx-4">
+            <li class="nav-item dropdown h5 mx-4">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Buscar por género
               </a>
@@ -67,7 +67,7 @@
     <h1 class="text-center m-5">Películas en cartelera</h1>
     <!-- Aplico flexbox con d-flex. Las tarjetas que no caben pasan a la siguiente fila. -->
     <section class="d-flex align-content-start flex-wrap">
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-quien-es-quien.jpg" class="card-img-top" alt="¿QUIÉN ES QUIÉN?">
         <div class="card-body">
           <h4 class="card-title">¿QUIÉN ES QUIÉN?</h4>
@@ -76,7 +76,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-absolucion.jpg" class="card-img-top" alt="ABSOLUCIÓN">
         <div class="card-body">
           <h4 class="card-title">ABSOLUCIÓN</h4>
@@ -85,7 +85,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-better-man.jpg" class="card-img-top" alt="BETTER MAN">
         <div class="card-body">
           <h4 class="card-title">BETTER MAN</h4>
@@ -94,7 +94,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-conclave.jpg" class="card-img-top" alt="CÓNCLAVE">
         <div class="card-body">
           <h4 class="card-title">CÓNCLAVE</h4>
@@ -103,7 +103,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-gladiator-2.jpg" class="card-img-top" alt="GLADIATOR II">
         <div class="card-body">
           <h4 class="card-title">GLADIATOR II</h4>
@@ -112,7 +112,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-hereje.jpg" class="card-img-top" alt="HERETIC (HEREJE)">
         <div class="card-body">
           <h4 class="card-title">HERETIC (HEREJE)</h4>
@@ -121,7 +121,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-kraven.jpg" class="card-img-top" alt="KRAVEN THE HUNTER">
         <div class="card-body">
           <h4 class="card-title">KRAVEN THE HUNTER</h4>
@@ -130,7 +130,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-mufasa.jpg" class="card-img-top" alt="MUFASA: EL REY LEÓN">
         <div class="card-body">
           <h4 class="card-title">MUFASA: EL REY LEÓN</h4>
@@ -139,7 +139,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-oh-canada.jpg" class="card-img-top" alt="OH, CANADA">
         <div class="card-body">
           <h4 class="card-title">OH, CANADA</h4>
@@ -148,7 +148,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-parthenope.jpg" class="card-img-top" alt="PARTHENOPE">
         <div class="card-body">
           <h4 class="card-title">PARTHENOPE</h4>
@@ -157,7 +157,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-sin-instrucciones.jpg" class="card-img-top" alt="SIN INSTRUCCIONES">
         <div class="card-body">
           <h4 class="card-title">SIN INSTRUCCIONES</h4>
@@ -166,7 +166,7 @@
         </div>
       </article>
 
-      <article class="card m-5 h5" style="width: 24rem;">
+      <article class="card m-5 h6" style="width: 24rem;">
         <img src="img/cartel-sonic.jpg" class="card-img-top" alt="SONIC 3: LA PELÍCULA">
         <div class="card-body">
           <h4 class="card-title">SONIC 3: LA PELÍCULA</h4>
@@ -181,21 +181,22 @@
       <div class="container">
         <div class="row mt-5">
           <div class="col-lg-4">
-            <h3>Enlaces</h3>
+            <h4>Enlaces</h4>
             <ul>
               <li><a href="peliculas.html">Películas</a></li>
+              <!-- Usando el id del elemento, accede a su altura en la página -->
               <li><a href="index.html#promo">Lo mejor del Cine</a></li>
             </ul>
           </div>
 
           <div class="col-lg-4">
-            <h3>Contacto</h3>
+            <h4>Contacto</h4>
             <p>Correo electrónico: contacto@cineloscalifas.com</p>
             <p>Dirección: C/Goya s/n. Teléfono: 957112233</p>
           </div>
 
           <div class="col-lg-4">
-            <h3>Cine Los Califas S.L</h3>
+            <h4>Cine Los Califas S.L</h4>
             <p>(c) 2023 Cine Los Califas. Todos los derechos reservados.</p>
           </div>
         </div>
