Crear carrito.html
- Formulario de pago.
- Añadido a la Navbar y al Footer.

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Vite</title>
+    <title>Cine Los Califas</title>
     <script type="module" src="./js/main.js"></script>
   </head>
 
@@ -55,10 +55,15 @@
           </ul>
 
           <!-- Formulario de búsqueda -->
-          <form class="d-flex" role="search">
+          <form class="d-flex flex-column m-2" role="search">
             <input class="form-control me-2" type="search" placeholder="Buscar película" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
           </form>
+
+          <!-- Carrito -->
+          <a class="navbar-brand" href="pago.html">
+            <img src="img/carrito.png" alt="Cámara de cine" class="">
+          </a>
         </div>
       </div>
     </nav>
@@ -167,6 +172,7 @@
               <li><a href="peliculas.html">Películas</a></li>
               <!-- Usando el id del elemento, accede a su altura en la página -->
               <li><a href="index.html#promo">Lo mejor del Cine</a></li>
+              <li><a href="carrito.html">Ir al carrito</a></li>
             </ul>
           </div>
 
