--- a/src/pelicula.html
+++ b/src/pelicula.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap w/ Vite</title>
+    <title>Cine Los Califas</title>
     <script type="module" src="./js/main.js"></script>
   </head>
 
@@ -41,24 +41,29 @@
               </a>
 
               <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Acción</a></li>
-                <li><a class="dropdown-item" href="#">Aventura</a></li>
-                <li><a class="dropdown-item" href="#">Ciencia ficción</a></li>
-                <li><a class="dropdown-item" href="#">Comedia</a></li>
-                <li><a class="dropdown-item" href="#">Drama</a></li>
-                <li><a class="dropdown-item" href="#">Suspense</a></li>
-                <li><a class="dropdown-item" href="#">Terror</a></li>
+                <li><a class="dropdown-item" href="peliculas.html">Acción</a></li>
+                <li><a class="dropdown-item" href="peliculas.html">Aventura</a></li>
+                <li><a class="dropdown-item" href="peliculas.html">Ciencia ficción</a></li>
+                <li><a class="dropdown-item" href="peliculas.html">Comedia</a></li>
+                <li><a class="dropdown-item" href="peliculas.html">Drama</a></li>
+                <li><a class="dropdown-item" href="peliculas.html">Suspense</a></li>
+                <li><a class="dropdown-item" href="peliculas.html">Terror</a></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Ver últimos estrenos</a></li>
+                <li><a class="dropdown-item" href="peliculas.html">Ver últimos estrenos</a></li>
               </ul>
             </li>
           </ul>
 
           <!-- Formulario de búsqueda -->
-          <form class="d-flex" role="search">
+          <form class="d-flex flex-column m-2" role="search">
             <input class="form-control me-2" type="search" placeholder="Buscar película" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
           </form>
+
+          <!-- Carrito -->
+          <a class="navbar-brand" href="pago.html">
+            <img src="img/carrito.png" alt="Cámara de cine" class="">
+          </a>
         </div>
       </div>
     </nav>
@@ -121,6 +126,7 @@
               <li><a href="peliculas.html">Películas</a></li>
               <!-- Usando el id del elemento, accede a su altura en la página -->
               <li><a href="index.html#promo">Lo mejor del Cine</a></li>
+              <li><a href="carrito.html">Ir al carrito</a></li>
             </ul>
           </div>
 
