--- a/src/index.html
+++ b/src/index.html
@@ -29,11 +29,6 @@
               <a class="nav-link active" aria-current="page" href="peliculas.html">Películas</a>
             </li>
 
-            <!-- Enlace a texto promocional -->
-            <li class="nav-item h5 mx-4">
-              <a class="nav-link" href="index.html#promo">Lo mejor del Cine</a>
-            </li>
-
             <!-- Dropdown de géneros -->
             <li class="nav-item dropdown h5 mx-4">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -55,7 +50,7 @@
           </ul>
 
           <!-- Formulario de búsqueda -->
-          <form class="d-flex flex-column m-2" role="search">
+          <form class="d-flex m-2" role="search">
             <input class="form-control me-2" type="search" placeholder="Buscar película" aria-label="Search">
             <button class="btn btn-outline-success" type="submit">Buscar</button>
           </form>
@@ -172,7 +167,7 @@
               <li><a href="peliculas.html">Películas</a></li>
               <!-- Usando el id del elemento, accede a su altura en la página -->
               <li><a href="index.html#promo">Lo mejor del Cine</a></li>
-              <li><a href="carrito.html">Ir al carrito</a></li>
+              <li><a href="pago.html">Ir al carrito</a></li>
             </ul>
           </div>
 
