--- a/src/pago.html
+++ b/src/pago.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Cine Los Califas</title>
+    <link rel="stylesheet" href="scss/styles.css">
     <script type="module" src="./js/main.js"></script>
   </head>
 
